--- a/about.html
+++ b/about.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-   
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&family=Yesteryear&display=swap" rel="stylesheet">
-
+	<link rel="stylesheet" href="blobz.min.css">;
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Montserrat:wght@100;200;300;400;500;600&family=Yesteryear&display=swap" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/db0609e0b9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
 
     <title>Final Portfolio</title>
   </head>
-  <body>  	
+  <body style="background-color: #F7D8DB;">  	
   	<nav>
-  		<a id="logo">km</a>
+  		<a href="index.html" id="logo">km</a>
   		<ul id="nav-ul">
 			<li id="nav-li">
 				<a href="index.html">PORTFOLIO</a>
@@ -27,6 +27,39 @@
 			</li>
 		</ul>
   	</nav>
+
+	<div id="pages" style="margin-top: 6em">
+		<div>
+			<div style="margin-left: 15%; margin-right: 15%;">
+			<div class="blob">
+				<div class="blob2">
+			<center><img src="squirrel.jpeg" class="squirrel" alt="squirrel">
+				<p class="about"><strong>Hi, I'm scaredsquirrel123!</strong><br><br></p>
+				<p>I am a sophomore studying computer science and entrepreneurship at Brown University.
+					Currently featured in my portfolio are projects from high school and a college course
+					I took called "CSCI 1300: User Interfaces and User Experience." Through creating
+					web and mobile designs and building majority of them, I have been
+					able to express my creative and problem-solving spirit! If you have any questions,
+					please connect with me on Linkedin or through email!
+
+				</p>
+			</div>
+			</div>
+			</div>
+			</center>
+			<br><div style="margin: 5em;"></div>
+			
+
+
+			
+		<div>
+	</div>
+
+	<div class="item7" style="margin-top: 2em; margin-bottom: 2em;">
+		<a href="#linked-in"><i class="fa-brands fa-linkedin fa-2x fa-inverse"></i></a>
+		<a href="mailto:scaredsquirrel123@example.com"><i class="fa-solid fa-envelope fa-2x fa-inverse"></i></a>
+	</div>
+
 
 
 
