--- a/development.html
+++ b/development.html
@@ -6,14 +6,14 @@
 			 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		 
 			
-			 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&family=Yesteryear&display=swap" rel="stylesheet">
+			 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Montserrat:wght@100;200;300;400;500;600&family=Yesteryear&display=swap" rel="stylesheet">
 			 <script src="https://kit.fontawesome.com/db0609e0b9.js" crossorigin="anonymous"></script>
 		 
 			 <link rel="stylesheet" href="styles.css">
 		 
-			 <title>Development</title>
+			 <title>Squishmallow Site</title>
 		</head>
-		<body>
+		<body style="background-color: #f9fcfb;">
 
 		<nav>
 			<a href="index.html" id="logo">km</a>
@@ -34,13 +34,18 @@
 		<div>
 			<a href="index.html"><span style="color: #C8E9DD;">
 				<i class="fa-solid fa-arrow-left"></i></span></a>
-			<h1 id="d-page-h1">Development</h1>
+			<h1 id="d-page-h1">Squishmallow Site</h1>
+      <div class="center">
+				<span style="background-color: #C8E9DD;" class="dot"></span>
+				<span style="background-color: #C8E9DD;" class="dot"></span>
+				<span style="background-color: #C8E9DD;" class="dot"></span>
+			</div>
 			
 			<div>
 				<h2 class="page-h2" id="text-3" style="margin-bottom: 0.5em;">Project Introduction</h2>
 				<p>
-					Development is an assignment where students individually practice creating a webpage in ReactJS.
-                    In this assignment, I developed an interactive Squishmallow interface using components and then tied these components to an internal data state. I created a list-based interface, which allowed users to sort, filter, and aggregate components.
+					Development is an assignment in Brown University's CSCI 1300 in which students individually practice creating a webpage in ReactJS.
+          In this assignment, I developed an interactive Squishmallow interface using components and then tied these components to an internal data state. I created a list-based interface, which allowed users to sort, filter, and aggregate components.
 				</p>
 			  </div>
 
@@ -53,8 +58,10 @@
             </ul>  
 
             <a target="_blank" href="https://scaredsquirrel123.github.io/development/" style="text-decoration: underline #C8E9DD 2px;"><h2 class="page-h2" id="text-3" style="margin-bottom: 0.5em;">Link to Development</h2></a>
-            <center><embed src="https://scaredsquirrel123.github.io/development/" style="width: 80%; height: 80vh;"></center>
-
+            <div class="center" style="margin: 10px"><a target="_blank" href= "https://scaredsquirrel123.github.io/development/"><button class="button-74" id="button-3" role="button" style="font-size: 1.25em; margin-bottom: 0.5em; margin-top: 0.5em;">CLICK HERE FOR DEVELOPMENT</button></a></p></div>
+            <p style="margin-bottom: 1em;">**Website also embedded below**</p>
+            <center><embed src="https://scaredsquirrel123.github.io/development/" style="width: 100%; height: 80vh;"></center>
+              
             <a target="_blank" href="https://github.com/scaredsquirrel123/development-submission" style="text-decoration: underline #C8E9DD 2px;"><h2 class="page-h2" id="text-3" style="margin-bottom: 0.5em;">Link to Github Repository</h2></a>
             <h2 class="page-h2" id="text-3" >Github README</h2>
 
