--- a/hils.html
+++ b/hils.html
@@ -6,14 +6,14 @@
 			 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		 
 			
-			 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&family=Yesteryear&display=swap" rel="stylesheet">
+			 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Montserrat:wght@100;200;300;400;500;600&family=Yesteryear&display=swap" rel="stylesheet">
 			 <script src="https://kit.fontawesome.com/db0609e0b9.js" crossorigin="anonymous"></script>
 		 
 			 <link rel="stylesheet" href="styles.css">
 		 
 			 <title>Hawaiian Land Snails App</title>
 		</head>
-		<body>
+		<body style="background-color: #fafafe;">
 
 		<nav>
 			<a href="index.html" id="logo">km</a>
@@ -35,6 +35,11 @@
 			<a href="index.html"><span style="color: #D1D3F6;">
 				<i class="fa-solid fa-arrow-left"></i></span></a>
 			<h1 id="hils-page-h1">Hawaiian Land Snails App</h1>
+			<div class="center">
+				<span style="background-color: #D1D3F6;" class="dot"></span>
+				<span style="background-color: #D1D3F6;" class="dot"></span>
+				<span style="background-color: #D1D3F6;" class="dot"></span>
+			</div>
 			
 			<div>
 				<h2 class="page-h2" id="text-4" style="margin-bottom: 0.5em;">Project Introduction</h2>
@@ -42,11 +47,44 @@
 					This Hawaiian Land Snails app was my senior year independent research project and was my first exposure to UI/UX design! 
                     In collaboration with Bishop Museum malacologists, I designed and developed to raise awareness
                     about the necessity of native Hawaiian land snail conservation and identify non-native snails.
-                    I coded the app in HTML, CSS, and JavaScript and uploaded it to App Store through Monaca (hybrid app development platform).
+                    <br><br>I coded the app in HTML, CSS, and JavaScript and uploaded it to App Store through Monaca (hybrid app development platform).
                     Unfortunately, it is no longer published on the App Store due to lack of funding. 
 However, I presented my app and research at the Hawaii Conservation Conference 2021 and have attached my app walkthrough, research paper, and research presentation below.
 				</p>
 			  </div>
+
+			<h2 class="page-h2" id="text-4" style="margin-bottom: 0.5em;">Problem to Solve</h2>
+			<p>The development of an app about Hawaiian land snails was important to
+				help correctly inform the public about these interesting invertebrate creatures that
+				are underrepresented in conservation management and policies. 
+				There is a high rate of extinction of native land snails, especially those of
+				the Pacific Islands, due to human
+				interference through habitat alteration and destruction and fifty-three
+				introduced snails that reside in Hawaii and are invasive in natural ecosystems.
+				<br><br>For this project, I
+				worked with Dr. Kenneth A. Hayes and Dr. Norine W. Yeung from the Bishop
+				Museum. The goal of
+				this project was to develop an app with the ability to help everyday users easily identify
+				invasive snails, learn about the severity of the native snail extinction crisis and
+				lack of conservation efforts, learn about the negative effects of non-native snails,
+				gain access to the contact information of Bishop Museum malacologists, and
+				overall have a good user experience while learning about snails in Hawaii.</p>
+
+
+			<h2 class="page-h2" id="text-4" style="margin-bottom: 0.5em;">Design Iterations</h2>
+			<p>
+				In this project, I went through multiple ideas regarding how to create a filtering tool for invasive snails. 
+				At first, I thought it would be user-friendly to use checkboxes to filter,
+				but this did not work since the data was only given to me in a dichotomous key. Then, I had another idea of having the user
+				walk through the entire snail identification process using the dichotomous key and then be returned 
+				one specific snail. However, if the user made a mistake or couldn't find the identifying feature,
+				then the snail would be completely wrong or the tool wouldn't work. Therefore, we created a dichotomous key filter 
+				hybrid tool that uses the dichotomous key structure but filters from the main snail list
+				and displays them one step at a time with the option to undo. You can see this below in the App Walkthrough.
+				Additionally, in my research presentation, you can see the process that I went through
+				from doing sketches on Notability to prototypes in Adobe XD to finally
+				developing the app in HTML, CSS, and JS.
+			</p>
 
 			<h2 class="page-h2" id="text-4" style="margin-bottom: 0.5em;">App Walkthrough</h2>
             <iframe width="200" height="400" src="https://www.youtube.com/embed/PX0sNdD6v3g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -72,7 +110,7 @@ However, I presented my app and research at the Hawaii Conservation Conference 2
 				<p>
 				  In this project, I learned how to code in HTML, CSS, and JS and learned the beginnings of UI/UX, such as 
                   making sketches, mock-ups, and doing user-research, that helped prepare me
-                  for Brown University's cs1300 class.
+                  for Brown University's CSCI 1300 class.
                 			</p>
 			  </div>
 
