--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-   
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&family=Yesteryear&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Montserrat:wght@100;200;300;400;500;600&family=Yesteryear&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/db0609e0b9.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="styles.css">
@@ -21,7 +20,7 @@
   				<a href="index.html">PORTFOLIO</a>
   			</li>
   			<li id="nav-li">
-  				<a href="#about">ABOUT</a>
+  				<a href="about.html">ABOUT</a>
   			</li>
   			<li id="nav-li">
   				<a href="#link-to-resume">RESUME</a>
@@ -36,7 +35,7 @@
 	  	<img src="squirrel.jpeg" class="squirrel" alt="squirrel">
 	  	<h1>scaredsquirrel123</h1>
 	  	<h2>UI/UX DESIGNER</h2> <br>
-	  	<p id="header">Designing with passion and empathy to create web and mobile apps.</p><br>
+	  	<p id="header">Designing with passion and empathy to create cute, functional web and mobile apps.</p><br><br>
 	  	<a href="#linked-in"><i class="fa-brands fa-linkedin fa-2x fa-inverse"></i></a>
 	  	<a href="mailto:scaredsquirrel123@example.com"><i class="fa-solid fa-envelope fa-2x fa-inverse"></i></a>
 
@@ -72,7 +71,7 @@
 				</div>
 				<div class="right1">
 					<div class="content">
-						<h3 id="text-3">Development</h3>
+						<h3 id="text-3">Squishmallow Site</h3>
 						<p>Created a list-based interface for Squishmallow sorting, filtering, and aggregating in React.</p>
 						<a href="development.html"><button class="button-74" id="button-3" role="button">CLICK FOR MORE</button></a>
 					</div>
