--- a/responsive-redesign.html
+++ b/responsive-redesign.html
@@ -6,14 +6,14 @@
 			 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		 
 			
-			 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&family=Yesteryear&display=swap" rel="stylesheet">
+			 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Montserrat:wght@100;200;300;400;500;600&family=Yesteryear&display=swap" rel="stylesheet">
 			 <script src="https://kit.fontawesome.com/db0609e0b9.js" crossorigin="anonymous"></script>
 		 
 			 <link rel="stylesheet" href="styles.css">
 		 
 			 <title>Responsive Redesign</title>
 		</head>
-		<body>
+		<body style="background-color: #f8fcfd;">
 
 		<nav>
 			<a href="index.html" id="logo">km</a>
@@ -35,19 +35,27 @@
 			<a href="index.html"><span style="color: #BFE2F1;">
 				<i class="fa-solid fa-arrow-left"></i></span></a>
 			<h1 id="rr-page-h1">Responsive Redesign</h1>
-			
+			<div class="center">
+				<span style="background-color: #BFE2F1;" class="dot"></span>
+				<span style="background-color: #BFE2F1;" class="dot"></span>
+				<span style="background-color: #BFE2F1;" class="dot"></span>
+			</div>
 			<div>
 				<h2 class="page-h2" id="text-1" style="margin-bottom: 0.5em;">Project Introduction</h2>
 				<p>
-					Responsive Redesign is an assignment where students individually practice the workflow of redesigning a simple website. 
+					Responsive Redesign is an assignment in Brown University's CSCI 1300 in which students individually practice the workflow of redesigning a simple website. 
 					Through analyzing and identifying flaws in an existing interface, I was tasked to create low-fidelity wireframes in Balsamiq and high-fidelity prototypes in Figma for various screen sizes, and build a responsive website in HTML and CSS based on those prototypes.
 				</p>
 			  </div>
 
-			<h2 class="page-h2" id="text-1">CP&E Homepage</h2>
+			<h2 class="page-h2" id="text-1">Problem to Solve</h2>
+			<p>
+				Fix the usability, accessibility, responsiveness, and overall design of:
+			</p>
+			<h3 class="page-h3" id="border-blue">CP&E Homepage</h3>
 			<center><img style="width:80%" src="./rr/homepage.png"><br>
 			<a target="_blank" href= "https://cpe-hawaii.com/"><button class="button-74" id="button-1" role="button" style="color: #39393b; font-size: 1.25em; margin-top: 0.5em;">CP&E WEBSITE</button></a></p></div>
-			<div style="margin-top: 2em; margin-bottom: 2em;"><p>Whenever I think of a poorly designed website, my father’s engineering company’s website comes to mind because of its poor organization, unresponsive layout that doesn’t work on mobile, bad color scheme, and much more (sorry dad…), which is why I chose to redesign it.</p></center>
+			<div style="margin-top: 1em; margin-bottom: 3em;"><p>Whenever I think of a poorly designed website, my father’s engineering company’s website comes to mind because of its poor organization, unresponsive layout that doesn’t work on mobile, bad color scheme, and much more (sorry dad…), which is why I chose to redesign it.</p></center>
 		</div>	
 		<div>
 			<div>
@@ -109,6 +117,7 @@
 					<li id="bullet">However, the company wants the conceptual model to allow these potential clients to learn about what services they can provide and see the variety of different types of projects that they work on.</li>
 				</ul>
 			</div>
+			<div style="margin: 4em;"></div>
 
 
 			<h2 class="page-h2" id="text-1">Accessibility using WebAIM Wave</h2>
@@ -133,17 +142,14 @@
 					<img style="width:50%; padding-bottom: 50px;" src="./rr/low-fi-mobile.png"><br>
 				</div>
 			</div>
+			
+			<div style="margin: 4em;"></div>
 			<div>
 				<h2 class="page-h2" id="text-1">Visual Design Style Guide</h2>
-				<img style="padding-bottom: 3em;" src="./rr/visual-style.png">
+				<img style="margin-bottom: 3em;" src="./rr/visual-style.png">
 			</div>
 			<div>
 				<h2 class="page-h2" id="text-1">High-fidelity Prototyping</h2>
-				<div class="center">
-					<span style="background-color: #F0E2D7;" class="dot"></span>
-					<span style="background-color: #F0E2D7;" class="dot"></span>
-					<span style="background-color: #F0E2D7;" class="dot"></span>
-				</div>
 				<h3 class="page-h3" id="border-blue">Desktop</h3><br>
 				<button class="accordion" id="dropdown-blue">Desktop Prototype</button>
 				<div class="panel-blue" style="text-align: center;">
@@ -163,7 +169,7 @@
 
 			<div style="margin-top: 5em;">
 				<h2 class="page-h2" id="text-1">Responsive Redesign</h2>
-			<div class="center" style="margin: 10px"><a target="_blank" href= "https://scaredsquirrel123.github.io/responsive-redesign/"><button class="button-74" id="button-1" role="button" style="color: #39393b; font-size: 1.25em; margin-bottom: 0.5em; margin-top: 0.5em;">CLICK HERE FOR REDESIGNED WEBSITE</button></a></p></div>
+			<div class="center" style="margin: 10px"><a target="_blank" href= "https://scaredsquirrel123.github.io/responsive-redesign/"><button class="button-74" id="button-1" role="button" style="font-size: 1.25em; margin-bottom: 0.5em; margin-top: 0.5em;">CLICK HERE FOR REDESIGNED WEBSITE</button></a></p></div>
 			<p>**Website also embedded below in desktop, tablet, and mobile sizes**</p>
 			<h3 class="page-h3" id="border-blue">Desktop</h3><br>
 			<!-- laptop -->
