--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	  	<img src="squirrel.jpeg" class="squirrel" alt="squirrel">
 	  	<h1>scaredsquirrel123</h1>
 	  	<h2>UI/UX DESIGNER</h2> <br>
-	  	<p id="header">Designing with passion and empathy to create cute, functional web and mobile apps.</p><br><br>
+	  	<p id="header">Designing with passion and empathy to create cute, functional websites and mobile apps.</p><br><br>
 	  	<a href="#linked-in"><i class="fa-brands fa-linkedin fa-2x fa-inverse"></i></a>
 	  	<a href="mailto:scaredsquirrel123@example.com"><i class="fa-solid fa-envelope fa-2x fa-inverse"></i></a>
 
