--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>  	
   	<nav>
-  		<a href="index.html" id="logo">km</a>
+  		<a href="index.html" id="logo">ss</a>
   		<ul id="nav-ul">
   			<li id="nav-li">
   				<a href="index.html">PORTFOLIO</a>
