--- a/iterative-design.html
+++ b/iterative-design.html
@@ -16,7 +16,7 @@
   <body style="background-color: #fefbf9;">
     	
   	<nav>
-  		<a href="index.html" id="logo">km</a>
+  		<a href="index.html" id="logo">ss</a>
   		<ul id="nav-ul">
   			<li id="nav-li">
   				<a href="index.html">PORTFOLIO</a>
