--- a/responsive-redesign.html
+++ b/responsive-redesign.html
@@ -13,7 +13,7 @@
 		 
 			 <title>Responsive Redesign</title>
 		</head>
-		<body style="background-color: #f8fcfd;">
+		<body>
 
 		<nav>
 			<a href="index.html" id="logo">ss</a>
