--- a/development.html
+++ b/development.html
@@ -13,7 +13,7 @@
 		 
 			 <title>Squishmallow Site</title>
 		</head>
-		<body style="background-color: #f9fcfb;">
+		<body>
 
 		<nav>
 			<a href="index.html" id="logo">ss</a>
