--- a/hils.html
+++ b/hils.html
@@ -13,7 +13,7 @@
 		 
 			 <title>Hawaiian Land Snails App</title>
 		</head>
-		<body style="background-color: #fafafe;">
+		<body>
 
 		<nav>
 			<a href="index.html" id="logo">ss</a>
