--- a/iterative-design.html
+++ b/iterative-design.html
@@ -13,7 +13,7 @@
 
     <title>Iterative Design</title>
   </head>
-  <body style="background-color: #fefbf9;">
+  <body>
     	
   	<nav>
   		<a href="index.html" id="logo">ss</a>
